--- a/index.html
+++ b/index.html
@@ -30,26 +30,31 @@
             <div class="col-xs-0 col-md-6 calculator"><form role="form">
               <div class="row">
                 <div class="col-xs-12">
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Number Of Dogs</label>
-                    <input type="number" class="form-control" id="numberOfDogs" placeholder="">
-                  </div>
+                  <h3 class="pickerlabel">Number Of Dogs</h3>
+
+                  <div id="dogquantitypicker" class="dogNumPicker">
+                    <button data-type="subtract">-</button><input id="dogval" value="1" placeholder="0" type="number">
+                    <button data-type="add">+</button>
+                 </div>
+
                 </div>
 
                 <div class="col-xs-12">
-                  <div class="form-group">
-                    <label for="exampleInputEmail1">Number Of Dogs Eligible For Multispot</label>
-                    <input type="number" class="form-control" id="multispotDogs" placeholder="">
-                  </div>
+                    <h3 class="pickerlabel">Dogs Eligible For Multispot</h3>
+                  <div id="multispotpicker" class="dogNumPicker">
+                    <button class="btn" data-type="subtract">-</button><input id="multival" value="0" placeholder="0" type="number"><button class="btn" data-type="add">+</button>
+                 </div>
                 </div>
+
+
 
                 <div class="col-xs-12">
                   <div class="form-group">
-                    <label for="creativeBonus">Creative Bonus</label>
+                    <h3 class="pickerlabel">Creative Bonus</h3>
+
                     <input type="text" class="form-control" id="creativeBonus" placeholder="example: Furry Ears (we'll add the point for you)">
                   </div>
                 </div>
-
 
                 <h1>Spot Bonuses</h1>
                 <div class="col-xs-6 col-sm-4">
@@ -95,23 +100,7 @@
                 </div>
               </div>
 
-              <h1>Spotted?</h1>
-              <div class="row">
-                <div class="col-xs-6">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="reverseSpot">Reverse Spot (All Points To Dog)
-                    </label>
-                  </div>
-                </div>
-                <div class="col-xs-6">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="jackOfSpades">Premium Reverse Spot: "The Jack Of Spades" (Dog Gets All Of Your Points)
-                    </label>
-                  </div>
-                </div>
-              </div>
+
 
 
               <h1>Long Paw of The Law</h1>
@@ -219,6 +208,25 @@
               </div>
             </div>
           </div>
+
+          <h1>Spotted?</h1>
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" id="reverseSpot">Reverse Spot (All Points To Dog)
+                </label>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" id="jackOfSpades">Premium Reverse Spot: "The Jack Of Spades" (Dog Gets All Of Your Points)
+                </label>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col-xs-12">
             <button type="submit" id="submit" class="btn btn-default btn-block">Submit</button>
