--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <body>
       <div class="container">
         <div class="row">
-          <div class="col-xs-0 col-md-4"></div>
-          <div class="col-xs-12 col-md-4"><div id="title">Dog-U-Lator</div>
-          <p id="subtitle">~it's a lifestyle~</div>
-            <div class="col-xs-0 col-md-4"></div>
+          <div class="col-xs-0 col-md-3"></div>
+          <div class="col-xs-12 col-md-6 titlebox"><div id="title">Dog-U-Lator</div>
+          <p id="subtitle">~it's a lifestyle~
+            <hr></div>
+            <div class="col-xs-0 col-md-3"></div>
           </div>
           <div class="row">
             <div class="col-xs-0 col-md-3"></div>
@@ -31,23 +32,21 @@
               <div class="row">
                 <div class="col-xs-12">
                   <h3 class="pickerlabel">Number Of Dogs</h3>
-
                   <div id="dogquantitypicker" class="dogNumPicker">
-                    <button data-type="subtract">-</button><input id="dogval" value="1" placeholder="0" type="number">
-                    <button data-type="add">+</button>
+                    <input id="dogval" value="1" placeholder="0" type="number">
+                    <br>
+                    <button class="left"data-type="subtract">-</button><button class="right" data-type="add">+</button>
                  </div>
 
-                </div>
 
                 <div class="col-xs-12">
                     <h3 class="pickerlabel">Dogs Eligible For Multispot</h3>
                   <div id="multispotpicker" class="dogNumPicker">
-                    <button class="btn" data-type="subtract">-</button><input id="multival" value="0" placeholder="0" type="number"><button class="btn" data-type="add">+</button>
+                    <input id="multival" value="0" placeholder="0" type="number">
+                    <br>
+                    <button class="left" data-type="subtract">-</button><button class="right" data-type="add">+</button>
                  </div>
                 </div>
-
-
-
                 <div class="col-xs-12">
                   <div class="form-group">
                     <h3 class="pickerlabel">Creative Bonus</h3>
@@ -55,6 +54,7 @@
                     <input type="text" class="form-control" id="creativeBonus" placeholder="example: Furry Ears (we'll add the point for you)">
                   </div>
                 </div>
+              </div>
 
                 <h1>Spot Bonuses</h1>
                 <div class="col-xs-6 col-sm-4">
