converted to oo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-xs-12">
                     <h3 class="pickerlabel">Dogs Eligible For Multispot</h3>
                   <div id="multispotpicker" class="dogNumPicker">
-                    <input id="multival" value="0" placeholder="0" type="number">
+                    <input id="multival" placeholder="0" type="number">
                     <br>
                     <button class="left" data-type="subtract">-</button><button class="right" data-type="add">+</button>
                  </div>
@@ -249,6 +249,8 @@
 <script src="js/getvalues.js"></script>
 <script src="js/calculator.js"></script>
 <script src="js/pageactions.js"></script>
+<script src="js/views.js"></script>
+<script src="js/run.js"></script>
 
 </body>
 </html>
