--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-0 col-md-3"></div>
-          <div class="col-xs-12 col-md-6 titlebox"><div id="title">Dog-U-Lator</div>
-          <p id="subtitle">~it's a lifestyle~
+
+          <div class="col-xs-12 col-md-6 titlebox">
+                 <div class="beta">beta!</div>
+                 <div id="title">DOG-U-LATOR</div>
+          <p id="subtitle">it's a lifestyle
             <hr></div>
             <div class="col-xs-0 col-md-3"></div>
           </div>
@@ -225,11 +228,11 @@
                 </label>
               </div>
             </div>
-          </div>
-
 
           <div class="col-xs-12">
-            <button type="submit" id="submit" class="btn btn-default btn-block">Submit</button>
+          <hr>
+            <button type="submit" id="submit" class="btn btn-default btn-block">DOG-U-LATE</button>
+          </div>
           </div>
         </form>
       </div>
