--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="form-group">
+
                     <h3 class="pickerlabel">Creative Bonus</h3>
 
-                    <input type="text" class="form-control" id="creativeBonus" placeholder="example: Furry Ears (we'll add the point for you)">
+                    <input type="text" class="form-control" id="creativeBonus" placeholder="example: Furry Ears">
                   </div>
                 </div>
               </div>
